import and export

--- a/src/style.scss
+++ b/src/style.scss
@@ -22,8 +22,8 @@ body {
   background: #d5e1ce;
 }
 .box {
-  width: 300px;
-  border: 15px solid rgb(78, 88, 180);
+  width: 50%;
+  border: 15px solid rgb(10, 70, 47);
   padding: 50px;
   margin: 20px;
 }
