--- a/src/style.css
+++ b/src/style.css
@@ -35,3 +35,16 @@ body {
 .input {
   width: 100%;
 }
+#documentArea {
+  width: 90%;
+
+  border: 15px solid rgb(127, 161, 149);
+}
+textarea {
+  padding-top: 50px;
+  width: 100%;
+  height: 50%;
+}
+.doc-main {
+  padding-top: 50px;
+}
