--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
 
 .box {
   width: 50%;
-  border: 15px solid rgb(10, 70, 47);
+  border: 10px solid rgb(10, 70, 47);
   padding: 50px;
   margin: 20px;
 }
@@ -39,13 +39,16 @@ body {
 #documentArea {
   width: 90%;
 
-  border: 15px solid rgb(127, 161, 149);
+  border: 10px solid rgb(127, 161, 149);
 }
 textarea {
-  padding-top: 50px;
+  padding: 20px;
   width: 100%;
   height: 50%;
 }
 .doc-main {
   padding-top: 50px;
+}
+.btn {
+  margin-top: 5px;
 }
