--- a/src/style.css
+++ b/src/style.css
@@ -25,9 +25,19 @@ body {
 .box {
   width: 50%;
   border: 10px solid rgb(10, 70, 47);
+  margin: auto;
   padding: 50px;
   margin: 20px;
 }
+
+.boxAuth {
+  width: 20%;
+  border: 15px solid rgb(10, 70, 47);
+  margin: auto;
+  padding: 50px;
+  margin: 20px;
+}
+
 #content {
   width: 100%;
   height: 100%;
@@ -51,4 +61,8 @@ textarea {
 }
 .btn {
   margin-top: 5px;
+}
+
+select {
+  margin: 30px;
 }
